--- a/style.css
+++ b/style.css
@@ -20,6 +20,18 @@ body {
     font-family: 'inherit', sans-serif;
 }
 
+.hero-img-1{
+    width: 100%;
+    height: 100%;
+    background-image: url('/src/hdefini1.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.carousel-item {
+    height: 65vh;
+}
+
 /* barra nav principal */
 .contenedor-nav {
     width: 100%;
@@ -277,6 +289,10 @@ media querys del primer carrusel */
         justify-content: center;
         margin: 15px auto;
         overflow: hidden;
+    }
+    .navbar-toggler{
+        color: white!important;
+        background-color: white!important;
     }
 }
 
